@@ -1,6 +1,6 @@
 ---
 name: CAM-Session
-version: 1.02
+version: 1.03
 author:
   - Clotho Advanced Media Inc., I<cpan@clotho.com>
 abstract: DBI and cookie CGI session state maintenance
@@ -11,9 +11,10 @@ requires:
   DBI: 1.0
   Digest::MD5: 2.0
 build_requires:
+  DBD::mysql: 0.01
   Test::More: 0.01
 provides:
   CAM::Session:
     file: lib/CAM/Session.pm
-    version: 1.02
+    version: 1.03
 generated_by: Module::Build version 0.2609
