@@ -37,7 +37,7 @@ a:hover {
 
 <p class="title">CAM-Session</p>
 
-<p class="subtitle">Last update: <a href="perl/CAM-Session-1.02-docs">v1.02</a>, 2005-04-22</p>
+<p class="subtitle">Last update: <a href="perl/CAM-Session-1.03-docs">v1.03</a>, 2005-04-26</p>
 
 
 
@@ -77,6 +77,22 @@ It's disadvantages are:
     </tr>
   </thead>
   <tbody>
+    
+      <tr>
+        <td valign="top"><a href="#perl">Perl</a></td>
+        <td valign="top">
+          <a href="perl/CAM-Session-1.03.tgz">CAM-Session-1.03.tgz</a>
+          (<a href="perl/CAM-Session-1.03.tgz.md5">MD5</a>)
+          <br>
+          <a href="perl/CAM-Session-1.03.zip">CAM-Session-1.03.zip</a>
+          (<a href="perl/CAM-Session-1.03.zip.md5">MD5</a>)
+          
+            <br>
+            <a href="perl/CAM-Session-1.03-docs">CAM-Session-1.03-docs</a>
+          
+        </td>
+        <td valign="top">Tue Apr 26 12:49:50 2005</td>
+      </tr>
     
       <tr>
         <td valign="top"><a href="#perl">Perl</a></td>
