@@ -1,3 +1,8 @@
+2005-04-26 12:47  chris
+
+	* Build.PL, Makefile.PL, lib/CAM/Session.pm: v1.03 Add DBD::mysql
+	  to the build requirements (for testing)
+
 2005-04-22 22:44  chris
 
 	* Build.PL, LICENSE, MANIFEST, README, index.html,
